Millores en Api UtilitatsFirma v2 #11 (Reader de SignDocumentRequestMultipart i centralitzar utilitats del Writers)
